# space_exploration_game

./: .gitignore  README.md
Music/: beyond the edge.sunvox
Space game/: Space game.vcxproj  Space game.vcxproj.filters  Star.cpp  Star.h  Vec2.h  main.cpp
space_game/: CMakeLists.txt  Space game.sln  Space game.vcxproj  Space game.vcxproj.filters
space_game/include/: camera.hpp  game_context.hpp  world.hpp
space_game/include/base/: component.hpp  entity.hpp
space_game/include/components/: types.hpp
space_game/src/: game_context.cpp  main.cpp  world.cpp
space_lander/: CMakeLists.txt
space_lander/src/: main.cpp
